--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -135,7 +135,7 @@
     </header>
     <div class="sidebar">
         <div class="profile-summary">
-            <img src="../Images/employes/macron.jpg" alt="Photo de profil">
+            <img src="../assets/images/employes/macron.jpg" alt="Photo de profil">
             <h3>Jean Dupont</h3>
             <p>Étudiant en informatique</p>
             <p>Université de Paris</p>
