--- a/Piscine/index.html
+++ b/Piscine/index.html
@@ -3,22 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>HireSphere - Accueil</title>
-    <!-- Redirection automatique vers la page d'accueil -->
-    <meta http-equiv="refresh" content="2; URL=pages/accueil.html">
-    <style>
-        body {
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
-        }
-        h1 {
-            color: #004080;
-        }
-        p {
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <meta http-equiv="refresh" content="2; URL=pages/login.html">
 </head>
 <body>
     <h1>Bienvenue sur HireSphere</h1>
