accueil fini sans le backend

--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -13,13 +13,13 @@
         
         .search-bar {
             position: absolute;
-            top: 0px; /* Alignement vertical */
-            right: 60px; /* Positionné à droite */
+            top: -2px; /* Alignement vertical */
+            right: 50px; /* Positionné à droite */
             display: flex; /* Utilisation de flexbox */
             flex-direction: row; /* Alignement horizontal des éléments */
             align-items: flex-end; /* Aligne les éléments à droite */
             gap: 5px; /* Espacement entre les éléments */
-            width: 300px; /* Largeur ajustée */
+            width: 250px; /* Largeur ajustée */
         }
         .search-bar input {
             width: 100%; /* Prend toute la largeur disponible */
@@ -95,15 +95,15 @@
             margin-bottom: 10px;
         }
         .content {
-            margin-left: 100px;
-            margin-right: 275px;
+            margin-left: 275px; /* Ajusté pour correspondre à la largeur de la barre latérale gauche */
+            margin-right: 275px; /* Conserve l'espace pour la barre latérale droite */
             padding: 15px;
             padding-top: 20px; /* Ajout d'espace pour éviter le chevauchement */
         }
         .publication {
             background-color: white;
-            padding: 15px;
-            margin: 100px 0;
+            padding: 150px;
+            margin: 150px 0;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
