--- a/Piscine/pages/profil.html
+++ b/Piscine/pages/profil.html
@@ -1,12 +1,138 @@
-<!DOCTYPE html>
+<section class="invitation">
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>HireSphere - Ma Page</title>
+    <title>HireSphere - Réseau</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <script src="reseau.js" defer></script>
+    <style>
+        body {
+            margin: 0;
+            padding-top: 80px;
+            overflow-x: hidden;
+        }
+        .search-bar {
+            position: absolute;
+            top: -2px;
+            right: 50px;
+            display: flex;
+            flex-direction: row;
+            align-items: flex-end;
+            gap: 5px;
+            width: 250px;
+        }
+        .search-bar input {
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .search-bar button {
+            padding: 6px 10px;
+            background-color: #004080;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .search-bar button:hover {
+            background-color: #003366;
+        }
+        .content {
+            margin-left: 0;
+            margin-right: 0;
+            padding: 15px;
+            padding-top: 20px;
+            max-width: 700px;
+            margin: 0 auto;
+        }
+        .publication {
+            background-color: white;
+            padding: 30px;
+            margin: 30px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            color: #888;
+        }
+        .content > h2 {
+            margin-bottom: 60px;
+        }
+        /* Ajout styles pour network-container, invitation, etc. */
+        .network-container {
+            padding: 15px;
+            max-width: 800px;
+            margin: auto;
+        }
+        .invitation {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        .invitation h2 {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            margin-bottom: 20px;
+            background-color: #333;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 6px;
+        }
+        .person {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
+        .person img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        .person-info {
+            flex-grow: 1;
+        }
+        .person h4 {
+            margin: 0;
+        }
+        .person p {
+            margin: 5px 0 0;
+            font-size: 0.9em;
+            color: #555;
+        }
+        .actions button {
+            margin-left: 10px;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .accept {
+            background-color: #004080;
+            color: white;
+        }
+        .ignore {
+            background-color: #ccc;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <header>
+        <h1>HireSphere</h1>
+        <form action="#" method="get" class="search-bar" onsubmit="handleSearch(event)">
+            <input type="text" id="search-input" name="query" placeholder="Rechercher..." />
+            <button type="submit">Rechercher</button>
+        </form>
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
@@ -18,12 +144,41 @@
             </ul>
         </nav>
     </header>
-
-    <main>
-        <h2>A propos de vous</h2>
-        <p>Contenu principal ici.</p>
-    </main>
-
+    
+    <div class="content">
+        <h2>Mon compte</h2>
+        <div class="network-container">
+            <section class="invitation">
+                <h2>Vous</h2>
+                <div class="person">
+                    <img src="../assets/images/employes/narain.jpg" alt="Profil 1" />
+                    <div class="person-info">   
+                        <h4>Nom :</h4>
+                        <h4>Prénom :</h4>
+                        <h4>Adresse mail :</h4>
+                        <h4>Âge :</h4>
+                        <h4>Poste :</h4>
+                        <h4>Entreprise :</h4>
+                    </div>
+                    <div class="actions">
+                        <button class="accept">Accepter</button>
+                        <button class="ignore">Refuser</button>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../assets/images/employes/soukane.jpg" alt="Profil 2" />
+                    <div class="person-info">
+                        <h4>Lucas Bernard</h4>
+                        <p>Étudiant en cybersécurité</p>
+                    </div>
+                    <div class="actions">
+                        <button class="accept">Accepter</button>
+                        <button class="ignore">Refuser</button>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
     </footer>
