harmonisation des CSS

--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -24,14 +24,18 @@
             </ul>
         </nav>
     </header>
-    <div class="quick-post">
+    <div class="card">
+        <div class="picture">
         <img src="../assets/images/employes/macron.jpg" alt="Photo de profil" class="quick-post-profile-picture">
+        </div>
         <input type="text" placeholder="Commencez une publication..." />
         <button>Publier</button>
     </div>
     <div class="sidebar">
         <div class="profile-summary">
+            <div class="picture">
             <img src="../assets/images/employes/macron.jpg" alt="Photo de profil">
+            </div>
             <h3>Jean Dupont</h3>
             <p>Étudiant en informatique</p>
             <p>Université de Paris</p>
@@ -41,15 +45,15 @@
         <main>
             <h2>Bienvenue sur HireSphere</h2>
             <p>Contenu principal ici.</p>
-            <div class="publication">
+            <div class="card">
                 <h3>Publication 1</h3>
                 <p>Ceci est le contenu de la première publication.</p>
             </div>
-            <div class="publication">
+            <div class="card">
                 <h3>Publication 2</h3>
                 <p>Ceci est le contenu de la deuxième publication.</p>
             </div>
-            <div class="publication">
+            <div class="card">
                 <h3>Publication 3</h3>
                 <p>Ceci est le contenu de la troisième publication.</p>
             </div>
