--- a/Piscine/pages/profil.html
+++ b/Piscine/pages/profil.html
@@ -27,10 +27,12 @@
     <div class="content">
         <h2>Mon compte</h2>
         <div class="network-container">
-            <section class="invitation">
+            <section class="card">
                 <h2>Vous</h2>
                 <div class="person">
+                    <div class="picture">
                     <img src="../assets/images/employes/narain.jpg" alt="Profil 1" />
+                    </div>
                     <div class="person-info">   
                         <h4>Nom :</h4>
                         <h4>Prénom :</h4>
@@ -45,7 +47,9 @@
                     </div>
                 </div>
                 <div class="person">
+                    <div class="picture">
                     <img src="../assets/images/employes/soukane.jpg" alt="Profil 2" />
+                    </div>
                     <div class="person-info">
                         <h4>Lucas Bernard</h4>
                         <p>Étudiant en cybersécurité</p>
