--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>HireSphere - Accueil</title>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="global.js" defer></script>
+    <script src="../assets/js/global.js" defer></script>
 </head>
 <body>
     <header>
