--- a/Piscine/pages/emplois.html
+++ b/Piscine/pages/emplois.html
@@ -20,64 +20,69 @@
         </nav>
     </header>
 
-    <!-- Barre latérale gauche : résumé profil -->
-    <div class="sidebar">
-        <div class="profile-summary">
-            <div class="picture">
-                <img src="../assets/images/employes/macron.jpg" alt="Photo de profil">
+    <!-- STRUCTURE PAGE -->
+    <div class="page-layout">
+
+        <!-- Barre latérale gauche : résumé profil -->
+        <div class="sidebar">
+            <div class="profile-summary">
+                <div class="picture">
+                    <img src="../assets/images/employes/macron.jpg" alt="Photo de profil">
+                </div>
+                <h3>Célian Hervouet</h3>
+                <p>Étudiant Ingénierie à l’ECE Paris<br><strong>ECE. École d’ingénieurs.</strong></p>
             </div>
-            <h3>Célian Hervouet</h3>
-            <p>Étudiant Ingénierie à l’ECE Paris<br><strong>ECE. École d’ingénieurs.</strong></p>
+            <ul>
+                <li><a href="#">Preferences</a></li>
+                <li><a href="#">My jobs</a></li>
+                <li><a href="#">My Career Insights</a></li>
+                <li><a href="#">Post a free job</a></li>
+            </ul>
         </div>
-        <ul>
-            <li><a href="#">Preferences</a></li>
-            <li><a href="#">My jobs</a></li>
-            <li><a href="#">My Career Insights</a></li>
-            <li><a href="#">Post a free job</a></li>
-        </ul>
+
+        <!-- Contenu principal -->
+        <main class="content">
+            <h2>Offres d'emploi recommandées</h2>
+
+            <div class="card">
+                <h2>Chargé de mobilisation - Tous Bénévoles</h2>
+                <p>Localisation : Nanterre (Île-de-France)<br>Type : Bénévolat<br><strong>Chaîne de l’Espoir</strong></p>
+                <div class="actions">
+                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btngray">Enregistrer</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <h2>Stage Ingénieur d’Affaires - HEDON</h2>
+                <p>Localisation : Région Île-de-France<br>Durée : 6 mois<br><strong>HEDON Technologies</strong></p>
+                <div class="actions">
+                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btngray">Enregistrer</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <h2>Stage Thermique - Stellantis</h2>
+                <p>Localisation : Poissy (On-site)<br>Durée : 6 mois<br><strong>Stellantis</strong></p>
+                <div class="actions">
+                    <button class="btnblue">Voir l'offre</button>
+                    <button class="btngray">Enregistrer</button>
+                </div>
+            </div>
+        </main>
+
+        <!-- Barre latérale droite : recommandations -->
+        <div class="right-sidebar">
+            <h3>Top job picks for you</h3>
+            <ul>
+                <li><a href="#">Chargé de mobilisation - Tous Bénévoles</a><br><small>Nanterre, Île-de-France</small></li>
+                <li><a href="#">Stage Ingénieur d’Affaires - HEDON Technologies</a><br><small>Greater Paris Region</small></li>
+                <li><a href="#">Stage Système Thermique - Stellantis</a><br><small>Poissy, Île-de-France</small></li>
+            </ul>
+        </div>
+
     </div>
-
-    <!-- Barre latérale droite : recommandations -->
-    <div class="right-sidebar">
-        <h3>Top job picks for you</h3>
-        <ul>
-            <li><a href="#">Chargé de mobilisation - Tous Bénévoles</a><br><small>Nanterre, Île-de-France</small></li>
-            <li><a href="#">Stage Ingénieur d’Affaires - HEDON Technologies</a><br><small>Greater Paris Region</small></li>
-            <li><a href="#">Stage Système Thermique - Stellantis</a><br><small>Poissy, Île-de-France</small></li>
-        </ul>
-    </div>
-
-    <!-- Contenu principal -->
-    <main class="content">
-        <h2>Offres d'emploi recommandées</h2>
-
-        <div class="card">
-            <h2>Chargé de mobilisation - Tous Bénévoles</h2>
-            <p>Localisation : Nanterre (Île-de-France)<br>Type : Bénévolat<br><strong>Chaîne de l’Espoir</strong></p>
-            <div class="actions">
-                <button class="btnblue">Voir l'offre</button>
-                <button class="btngray">Enregistrer</button>
-            </div>
-        </div>
-
-        <div class="card">
-            <h2>Stage Ingénieur d’Affaires - HEDON</h2>
-            <p>Localisation : Région Île-de-France<br>Durée : 6 mois<br><strong>HEDON Technologies</strong></p>
-            <div class="actions">
-                <button class="btnblue">Voir l'offre</button>
-                <button class="btngray">Enregistrer</button>
-            </div>
-        </div>
-
-        <div class="card">
-            <h2>Stage Thermique - Stellantis</h2>
-            <p>Localisation : Poissy (On-site)<br>Durée : 6 mois<br><strong>Stellantis</strong></p>
-            <div class="actions">
-                <button class="btnblue">Voir l'offre</button>
-                <button class="btngray">Enregistrer</button>
-            </div>
-        </div>
-    </main>
 
     <footer>
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
