--- a/Piscine/pages/reseau.html
+++ b/Piscine/pages/reseau.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>HireSphere - Réseau</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <script src="../assets/js/global.js" defer></script>
 </head>
 <body>
     <header>
@@ -23,15 +24,16 @@
             </ul>
         </nav>
     </header>
-    
+
     <div class="content">
         <h2>Mon réseau</h2>
         <div class="network-container">
+            <!-- Invitations -->
             <section class="card">
-                <h2>Invitations</h2>
+                <h3>Invitations</h3>
                 <div class="person">
                     <div class="picture">
-                    <img src="../assets/images/employes/narain.jpg" alt="Profil 1" />
+                        <img src="../assets/images/employes/narain.jpg" alt="Profil 1">
                     </div>
                     <div class="person-info">
                         <h4>Claire Martin</h4>
@@ -44,7 +46,7 @@
                 </div>
                 <div class="person">
                     <div class="picture">
-                    <img src="../assets/images/employes/soukane.jpg" alt="Profil 2" />
+                        <img src="../assets/images/employes/soukane.jpg" alt="Profil 2">
                     </div>
                     <div class="person-info">
                         <h4>Lucas Bernard</h4>
@@ -57,11 +59,12 @@
                 </div>
             </section>
 
+            <!-- Suggestions -->
             <section class="card">
-                <h2>Suggestions</h2>
+                <h3>Suggestions</h3>
                 <div class="person">
                     <div class="picture">
-                    <img src="../assets/images/employes/griffith.jpg" alt="Profil 3" />
+                        <img src="../assets/images/employes/griffith.jpg" alt="Profil 3">
                     </div>
                     <div class="person-info">
                         <h4>Sophie Renault</h4>
@@ -73,7 +76,7 @@
                 </div>
                 <div class="person">
                     <div class="picture">
-                    <img src="../assets/images/employes/cherif.jpg" alt="Profil 4" />
+                        <img src="../assets/images/employes/cherif.jpg" alt="Profil 4">
                     </div>
                     <div class="person-info">
                         <h4>David Lefèvre</h4>
@@ -86,6 +89,7 @@
             </section>
         </div>
     </div>
+
     <footer>
         <p>&copy; 2025 HireSphere. Tous droits réservés.</p>
     </footer>
