--- a/Piscine/pages/login.html
+++ b/Piscine/pages/login.html
@@ -6,18 +6,19 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
+    <div style="background:#000;color:#fff;width:100%;padding:20px 0 10px 0;text-align:center;font-size:2em;font-weight:500;">HireSphere<br>Login</div>
     <main>
-        <h2>Connexion</h2>
-        <form action="../backend/index.php" method="POST">
+        <h2 style="font-size:2em; color:#111; margin:40px 0 30px 0;">Connexion</h2>
+        <form action="../backend/index.php" method="POST" style="display:flex;flex-direction:column;align-items:center;gap:15px;max-width:300px;margin:0 auto;">
             <input type="hidden" name="action" value="login">
-            <div style="display: flex; flex-direction: column; gap: 10px; max-width: 300px;">
-          <label for="email">Email :</label>
-          <input type="email" id="email" name="email" required>
-          <label for="password">Mot de passe :</label>
-          <input type="password" id="password" name="password" required>
-          <button type="submit">Se connecter</button>
-            </div>
+            <input type="email" name="email" placeholder="adresse mail" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <input type="password" name="password" placeholder="mot de passe" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <button type="submit" class="btnblue" style="width:250px;font-size:1.1em;font-weight:500;margin-top:10px;">Connection</button>
         </form>
+        <div style="margin-top:40px;text-align:center;">
+            <strong>Vous ne faites pas encore partie de la communauté ?</strong><br>
+            <a href="register.html" style="color:#1746a2;text-decoration:underline;">Créer un compte</a>
+        </div>
     </main>
 </body>
 </html>
