--- a/Piscine/pages/accueil.html
+++ b/Piscine/pages/accueil.html
@@ -7,26 +7,28 @@
     <script src="../assets/js/global.js" defer></script>
 </head>
 <body>
-    <form action="../backend/index.php" method="POST" style="position:absolute;top:20px;right:30px;">
-        <input type="hidden" name="action" value="logout">
-        <button type="submit" class="btnblue">Se déconnecter</button>
-    </form>
     <header>
         <h1>HireSphere</h1>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="reseau.html">Réseau</a></li>
+                <li><a href="emplois.html">Emplois</a></li>
+                <li><a href="messagerie.html">Messagerie</a></li>
+                <li><a href="notifications.html">Notifications</a></li>
+                <li><a href="profil.html">Vous</a></li>
+                <li>
+                    <form action="../backend/index.php" method="POST" style="display:inline;">
+                        <input type="hidden" name="action" value="logout">
+                        <button type="submit" class="logout-link">Se déconnecter</button>
+                    </form>
+                </li>
+            </ul>
+        </nav>
         <form action="#" method="get" class="search-bar" onsubmit="handleSearch(event)">
             <input type="text" id="search-input" name="query" placeholder="Rechercher..." />
             <button type="submit">Rechercher</button>
         </form>
-        <nav>
-            <ul>
-                <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="reseau.html">Mon Réseau</a></li>
-                <li><a href="profil.html">Vous</a></li>
-                <li><a href="notifications.html">Notifications</a></li>
-                <li><a href="messagerie.html">Messagerie</a></li>
-                <li><a href="emplois.html">Emplois</a></li>
-            </ul>
-        </nav>
     </header>
 
     <div class="page-layout">
