--- a/Piscine/pages/register.html
+++ b/Piscine/pages/register.html
@@ -6,13 +6,17 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-    <div style="background:#000;color:#fff;width:100%;padding:20px 0 10px 0;text-align:center;font-size:2em;font-weight:500;">HireSphere<br>Login</div>
+    <div style="background:#000;color:#fff;width:100%;padding:20px 0 10px 0;text-align:center;font-size:2em;font-weight:500;">HireSphere</div>
     <main>
         <h2 style="font-size:2em; color:#111; margin:40px 0 30px 0;">Créer un compte</h2>
-        <form action="../backend/index.php" method="POST" style="display:flex;flex-direction:column;align-items:center;gap:15px;max-width:300px;margin:0 auto;">
+        <form action="../backend/index.php" method="POST" enctype="multipart/form-data" style="display:flex;flex-direction:column;align-items:center;gap:15px;max-width:300px;margin:0 auto;">
             <input type="hidden" name="action" value="register">
             <input type="email" name="email" placeholder="adresse mail" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
             <input type="password" name="password" placeholder="mot de passe" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <input type="text" name="nom" placeholder="Nom" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <input type="text" name="prenom" placeholder="Prénom" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <input type="text" name="emploi" placeholder="Emploi" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
+            <input type="file" name="photo_profil" accept="image/*" required style="background:#d3d3d3;border:none;border-radius:8px;padding:12px;width:250px;font-size:1em;text-align:center;">
             <button type="submit" class="btnblue" style="width:250px;font-size:1.1em;font-weight:500;margin-top:10px;">Créer un compte</button>
         </form>
         <div style="margin-top:40px;text-align:center;">
